--- a/driver_page/driver_page.css
+++ b/driver_page/driver_page.css
@@ -115,19 +115,7 @@ position: absolute;
     direction: rtl;
     top: 1030px;
 }
-#reports_container{
-	    position: absolute;
-    height: 400px;
-    width: 90%;
-    right: 50px;
-    top: 600px;
-    background-color: white;
-    border-radius: 6px;
-	padding:10px;
-	overflow-y:scroll;
-	/* for scrollbar width */
-	transform:translateX(16px);
-}
+
 .plus{
 	position: absolute;
     background-color: blue;
@@ -197,11 +185,8 @@ position: absolute;
 	width:90%;
 }
 .services{
-	    position: absolute;
-    top: 1120px;
-    
-    width: 90%;
-    right: 50px;
+	position: absolute;
+    top: 10px;
 }
 .service{
 	position:relative;
@@ -267,4 +252,8 @@ position: absolute;
 	border-top:2px solid darkblue;
 	
 }
-
+.container_1{
+    position: relative;
+    height:500px;
+    width:100%;
+}
