--- a/common/common.css
+++ b/common/common.css
@@ -41,7 +41,7 @@ transform: translate(-50%,-50%);
 	height: 420px;
 	/* background: rebeccapurple; */
 	width: 93%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	position: relative;
 	top: 20px;
