--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,9 +1,9 @@
-#nav-bar{
+#SideBar{
 	position: absolute;
-	bottom: 1%;
-	left: 50%;
-    height: 11%;
-    width: 96%;
+	
+	right:0px;
+    height: 100%;
+    width: 200px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
