--- a/src/components/AppFrame/AppFrame.css
+++ b/src/components/AppFrame/AppFrame.css
@@ -1,9 +1,10 @@
 .appFrame{
-    position: absolute; 
+    position: relative; 
     height: 500px; 
     width: 580px; 
     background: black; 
     border-radius: 5px; 
+   
     top: 50%; 
     left: 50%; 
     transform: translate(-50%,-50%);
