--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -1,23 +1,12 @@
-.content-container{
-	
-    height: 410px;
-        
-    /* background: rebeccapurple; */
-        
-    width: 93%;
-        
+.content-container{       
+    width: 380px;
+    height: 500px;
     overflow-y: auto;
-        
     overflow-x: hidden;
-        
     position: relative;
-        
-    top: 20px;
-        
-    left: 50%;
-        
-    transform: translateX(-50%);
-    }
+    top:0px;
+    left: 0px;
+}
 .content-container::-webkit-scrollbar{
     width: 10px;
 }
