--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,38 +1,55 @@
 #SideBar{
 	position: absolute;
-	
+	top: 0px;
 	right:0px;
     height: 100%;
     width: 200px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    transform: translateX(-50%);
-    border-radius: 10px;
+	
+    
+    border-radius: 4px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
+.subject-option{
+    position: relative;
+    height: 130px;
+    width: 100%;
+    background: green;
+    direction: rtl;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 30px;
+    padding-top: 10px;
+    color: aqua;
+    display: flex;
+    justify-content: center;
+}
+
 .option{
 	position: relative;
     height: 50px;
-    width: 117px;
+    width: 100%;
 	transition:0.2s;
 }
+.first-option{
+	margin-top:20px;
+}
 .option svg{
-	    height: 60%;
-	    position: absolute;
-	    top: 3px;
-	    left: 50%;
-	    transform: translateX(-50%);
-	    width: 40%;
+    height: 60%;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 40px;
 }
 .option .title{
     position: absolute;
-    height: 20%;
-    top: 68%;
-    font-size: 11px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    font-size: 18px;
+    right: 70px;
+    transform: translateY(-50%);
+    direction: rtl;
+
 }
 .option:hover{
 	transform:scale(1.1)
