a lot of changes in ui and ux, complete change lang to persian

--- a/src/components/AppFrame/AppFrame.css
+++ b/src/components/AppFrame/AppFrame.css
@@ -2,7 +2,7 @@
     position: relative; 
     height: 500px; 
     width: 580px; 
-    background: black; 
+    background: rgb(44,44,46); 
     border-radius: 5px; 
    
     top: 50%; 
