--- a/src/components/ReportOption/styles.css
+++ b/src/components/ReportOption/styles.css
@@ -5,17 +5,15 @@
     background: rgba(0,0,139,0.5);
     border-radius: 7px;
 }
-.report-option{
-
-border: 1px solid blue;
-
-width: 338px;
-
-border-radius: 3px;
-
-padding: 5px 0px 5px 0px;
-
-position: relative;
-margin-bottom: 10px;
-left: 9px;
+.report-option {
+    border: 1px solid blue;
+    width: 338px;
+    border-radius: 3px;
+    padding: 5px 0px 5px 0px;
+    position: relative;
+    margin-bottom: 10px;
+    margin-left: auto;
+    /* left: 9px; */
+    margin-right: auto;
+    width: 100%;
 }
