--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -4,7 +4,7 @@
 	right:0px;
     height: 100%;
     width: 200px;
-	
+	background: rgb(58,58,60);
     
     border-radius: 4px;
     border-top-left-radius: 0px;
@@ -14,7 +14,7 @@
     position: relative;
     height: 130px;
     width: 100%;
-    background: green;
+    background: rgb(72,72,74);
     direction: rtl;
     padding-right: 10px;
     padding-left: 10px;
@@ -29,7 +29,7 @@
 	position: relative;
     height: 50px;
     width: 100%;
-	transition:0.2s;
+	transition:0.15s;
 }
 .first-option{
 	margin-top:20px;
@@ -49,8 +49,9 @@
     right: 70px;
     transform: translateY(-50%);
     direction: rtl;
-
+    color:whitesmoke;
+    cursor: pointer;
 }
 .option:hover{
-	transform:scale(1.1)
+	background:rgba(99,99,102,0.3);
 }
