--- a/src/components/reports/styles.css
+++ b/src/components/reports/styles.css
@@ -2,10 +2,23 @@
     display: inline-block;
     padding: 5px 4px 5px 4px;
     border-radius: 7px;
+    color: aqua;
 }
 #reports,#open_reports,#closed_reports{
     position: relative;
     width: 100%;
     min-height: 80px;
 
+}
+#sort-icon-container svg{
+    height:70%;
+    width: 70%;
+    border-radius: 15px;
+    box-sizing: content-box;
+    transition: 0.2s;
+    padding:5px;
+}
+#sort-icon-container svg:hover{
+    background:rgba(99,99,102,0.3);
+    
 }
