ui and ux improvments

--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -12,5 +12,5 @@
     width: 10px;
 }
 .content-container::-webkit-scrollbar-thumb{
-    background: gray;
+    background: rgba(128, 128, 128, 0.356);
 }
