--- a/src/components/new_report/styles.css
+++ b/src/components/new_report/styles.css
@@ -1,5 +1,5 @@
 #new-report #report_text{
-	height: 127px;
+	height: 117px;
 	resize:none;
 }
 #quit_app{
@@ -19,6 +19,8 @@
 #quit_app:hover{
 	background: red;
 }
-#new_report input,#new_report textarea{
-	background: rgb(242,242,247);
+#new-report input,#new-report textarea{
+	background-color: rgb(99 99 102 / 70%);
+	border:1px solid rgba(0 ,255 ,255,0.4);
+	color:white
 }
