--- a/src/components/AppFrame/AppFrame.css
+++ b/src/components/AppFrame/AppFrame.css
@@ -8,4 +8,6 @@
     top: 50%; 
     left: 50%; 
     transform: translate(-50%,-50%);
+    border: 3px solid purple;
+    box-sizing: content-box;
 }
