--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -10,7 +10,8 @@
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
 }
-.subject-option{
+
+.subject-option {
     position: relative;
     height: 130px;
     width: 100%;
@@ -20,8 +21,10 @@
     padding-left: 10px;
     font-size: 30px;
     padding-top: 10px;
+    /* box-sizing: border-box; */
     color: aqua;
     display: flex;
+    border-bottom: 3px solid rgb(90 90 90 / 25%);
     justify-content: center;
 }
 
@@ -29,10 +32,12 @@
 	position: relative;
     height: 50px;
     width: 100%;
-	transition:0.15s;
+	cursor: pointer;
+    transition:0.1s;
+    /* border:2px solid rgb(0 255 255 / 8%) */
 }
 .first-option{
-	margin-top:20px;
+	margin-top:10px;
 }
 .option svg{
     height: 60%;
@@ -50,8 +55,11 @@
     transform: translateY(-50%);
     direction: rtl;
     color:whitesmoke;
-    cursor: pointer;
+    
 }
 .option:hover{
-	background:rgba(99,99,102,0.3);
+	background:rgba(99,99,102,0.1);
+}
+.option[active]{
+	background:rgba(99,99,102,0.2);
 }
