--- a/front-end/src/components/ReportOption/styles.css
+++ b/front-end/src/components/ReportOption/styles.css
@@ -6,19 +6,20 @@
     border-radius: 7px;
 }
 .report-option {
-    /* border: 1px solid blue; */
-    width: 338px;
     border-radius: 3px;
     padding: 5px 0px 5px 0px;
     position: relative;
     margin-bottom: 10px;
     background: rgb(72 72 74 / 54%);
     margin-left: auto;
-    /* left: 9px; */
-    border-radius: 15px;
+    border-radius: 7px;
     margin-right: auto;
     width: 100%;
     cursor: pointer;
+    height: 70px;
+}
+.svg-container{
+    height: 100%;
 }
 .report-option svg#arrow-icon{
     transform: rotate(180deg);
