--- a/front-end/src/components/SideBar/SideBar.css
+++ b/front-end/src/components/SideBar/SideBar.css
@@ -5,29 +5,28 @@
     height: 100%;
     width: 200px;
 	background: rgb(58,58,60);
-    
     border-radius: 4px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
 }
 
 .subject-option {
-    position: relative;
-    height: 130px;
-    width: 100%;
-    background: rgb(72,72,74);
-    direction: rtl;
-    padding-right: 10px;
-    padding-left: 10px;
-    font-size: 30px;
-    padding-top: 10px;
-    /* box-sizing: border-box; */
-    color: aqua;
-    display: flex;
-    border-bottom: 3px solid rgb(90 90 90 / 25%);
-    justify-content: center;
+	position: relative;
+	height: 115px;
+	width: 100%;
+	background: rgb(72,72,74);
+	direction: rtl;
+	padding-right: 10px;
+	padding-left: 10px;
+	font-size: 16px;
+	padding-top: 0px;
+	/* box-sizing: border-box; */
+	color: aqua;
+	/* display: flex; */
+	border-bottom: 3px solid rgb(90 90 90 / 25%);
+	/* justify-content: center; */
+	/* line-height: 36px; */
 }
-
 .option{
 	position: relative;
     height: 50px;
@@ -40,7 +39,7 @@
 	margin-top:10px;
 }
 .option svg{
-    height: 60%;
+    height: 50%;
     position: absolute;
     top: 50%;
     right: 10px;
