fix last commit problem

--- a/front-end/src/components/PopUpDialog/PopUpDialog.css
+++ b/front-end/src/components/PopUpDialog/PopUpDialog.css
@@ -10,7 +10,7 @@
     transition: 0.2s;
 }
 #popUpDialogContainer[hidden]{
-    display: hidden;
+    display: none;
 }
 #popUpDialog{
     min-height: 150px;
